fixing footer and overflow for modal

--- a/src/sass/base/_modal.scss
+++ b/src/sass/base/_modal.scss
@@ -18,10 +18,14 @@
   opacity: 0;
   pointer-events: none;
 
-  .modal {
+  body.modal {
     transform: translate(-50%, -50%) scale(0);
     opacity: 0;
   }
+}
+
+.modal-open {
+  overflow: hidden;
 }
 
 .modal-close-btn {
